fix dropdown menu on mobile

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -2047,6 +2047,10 @@ header,
         margin-bottom: .2rem!important;
     }
 
+    .title{
+        font-size: 1.5rem;
+    }
+
     #navbarSupportedContent{
         .navbar-nav{
             .w-45vw{
@@ -2119,6 +2123,7 @@ header,
                 }
             }
         }
+
     }
 
     .navbar-custom {
@@ -2139,6 +2144,16 @@ header,
                 }
             }
         }
+
+        
+        .dropdown-category {
+            .dropdown-menu{
+                &.show {
+                    position: absolute;
+                }
+            }
+        }
+        
     }
 
     #modalPopup {
@@ -2162,12 +2177,19 @@ header,
             }
         }
     }
-
-    .text-copyright{
-        text-align: center !important;
-
-        .text-right{
+    .footer{
+        .mb-xs-3{
+            margin-bottom: .5rem !important;
+        }
+        h3{
+            font-size: 1.3rem;
+        }
+        .text-copyright{
             text-align: center !important;
+
+            .text-right{
+                text-align: center !important;
+            }
         }
     }
 }
